fix(button): fix text vertical align

--- a/packages/ui-core/src/components/Button/Button.less
+++ b/packages/ui-core/src/components/Button/Button.less
@@ -38,6 +38,10 @@
         vertical-align: top;
     }
 
+    &__text {
+        transform: translateY(-1px);
+    }
+
     &__content {
         display: flex;
         align-items: center;
